--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ background-color: darkorchid;
 		border: #a65400 20px outset;
 		background-color: #a65400;
 		padding-bottom: 30px;
-		margin-left: 175;
+		margin-left: 175px;
 
 		color: #ffba73;
 		font-size: 48px;
@@ -168,15 +168,7 @@ margin-left: 25px;
 		<script type="text/javascript">
 		function getDate() {
 			var date = new Date();
-			var hours = date.getHours();
-			var minutes = date.getMinutes();
-    		var seconds = date.getSeconds();
-    		//По надобности условие ниже повторить с minutes и hours
-    		if(seconds < 10)
-    		{
-        	seconds = '0' + seconds;
-   			}
-    		document.getElementById('timedisplay').innerHTML = date + hours + ':' + minutes + ':' + seconds;
+    		document.getElementById('timedisplay').innerHTML = date;
 			}
 		setInterval(getDate, 0);
 	</script>
