--- a/goroscop.html
+++ b/goroscop.html
@@ -168,15 +168,8 @@ margin-left: 25px;
 		<script type="text/javascript">
 		function getDate() {
 			var date = new Date();
-			var hours = date.getHours();
-			var minutes = date.getMinutes();
-    		var seconds = date.getSeconds();
-    		//По надобности условие ниже повторить с minutes и hours
-    		if(seconds < 10)
-    		{
-        	seconds = '0' + seconds;
-   			}
-    		document.getElementById('timedisplay').innerHTML = date + hours + ':' + minutes + ':' + seconds;
+
+    		document.getElementById('timedisplay').innerHTML = date;
 			}
 		setInterval(getDate, 0);
 	</script>
